--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     
     <!-- Set page title and icon -->
-    <title>Kaliteye Hosgeldiniz</title>
+    <title>Kaan 95</title>
     <link rel="icon" href="data:,">
    
     <link rel="stylesheet" #type="text/css" href="./css/style.css" onload="this.media='all'">
