about me yazısı düzeltildi

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="content">
                 <div class="welcome-text">
-                    <p>Hi! I'm Kaan (just a random Geospat Engineer from Türkiye) welcome to my personal web page!</p>
+                    <p>Hi! I'm Kaan (just a random engineer from Türkiye) welcome to my personal web page!</p>
                 </div>
                 <div class="welcome-image">
                                         <img src="./images/backgrounds/ocmeyt9jlsirtc1yvocy.avif" alt="Kaan's Photo">
